--- a/config.json
+++ b/config.json
@@ -1,4 +1,16 @@
 {
+  "services": [
+    {
+      "host": "bitcarbon.herokuapp.com",
+      "port": "80"
+    }
+  ],
+  "eth_node": [
+    {
+      "host": "18.219.213.49",
+      "port": "8545"
+    }
+  ],
   "contract_address": "0x87a7ceba62430958b0ce414ad1a4563bd145808b",
   "abi": [
     {
