--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "services_host_port": "80",
   "eth_host": "18.217.227.228",
   "eth_host_port": "8545",
-  "consortium_address": "0x4894d8c9de82bd768c3eecab32f7996eb854f4de",
+  "consortium_address": "0x716a5ca2c54e1900b6267da90649c3cd74670766",
   "consortium_abi": [
     {
       "constant": true,
@@ -55,6 +55,20 @@
       ],
       "payable": false,
       "stateMutability": "view",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_minimumBalance",
+          "type": "uint256"
+        }
+      ],
+      "name": "updateMinimumBalance",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
       "type": "function"
     },
     {
@@ -191,6 +205,34 @@
     {
       "constant": true,
       "inputs": [],
+      "name": "minimumBalance",
+      "outputs": [
+        {
+          "name": "",
+          "type": "uint256"
+        }
+      ],
+      "payable": false,
+      "stateMutability": "view",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_token",
+          "type": "address"
+        }
+      ],
+      "name": "setERC20Token",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": true,
+      "inputs": [],
       "name": "bcde",
       "outputs": [
         {
@@ -214,6 +256,20 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": true,
+      "inputs": [],
+      "name": "token",
+      "outputs": [
+        {
+          "name": "",
+          "type": "address"
+        }
+      ],
+      "payable": false,
+      "stateMutability": "view",
       "type": "function"
     },
     {
@@ -497,10 +553,52 @@
       "inputs": [
         {
           "name": "_earningsRatePercent",
-          "type": "uint8"
+          "type": "uint256"
         }
       ],
       "name": "proposeSetEarningsRatePercent",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_minimumBalance",
+          "type": "uint256"
+        }
+      ],
+      "name": "proposeSetMinimumMemberEligibility",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_basePricePerCarat",
+          "type": "uint256"
+        }
+      ],
+      "name": "proposeSetPriceBase",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_pricePowerx100",
+          "type": "uint256"
+        }
+      ],
+      "name": "proposeSetPricePowerx100",
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
@@ -582,7 +680,7 @@
       "type": "function"
     }
   ],
-  "bcde_address": "0x7f0567f4319d90c97a6bd510eec2964379605627",
+  "bcde_address": "0x612f72f0302da1f1fab1e773b411768c456b176d",
   "bcde_abi": [
     {
       "constant": true,
@@ -1309,7 +1407,7 @@
       "type": "function"
     }
   ],
-  "registry_address": "0xeef9fea298797c381d3cfb44dc80c737239a77db",
+  "registry_address": "0x47d21eec085068560847d86d7adbf1aa0511226b",
   "registry_abi": [
     {
       "constant": true,
@@ -1773,6 +1871,10 @@
         {
           "name": "_tokenId",
           "type": "uint256"
+        },
+        {
+          "name": "_data",
+          "type": "bytes"
         }
       ],
       "name": "safeTransferFrom",
@@ -1795,10 +1897,6 @@
         {
           "name": "_tokenId",
           "type": "uint256"
-        },
-        {
-          "name": "_data",
-          "type": "bytes"
         }
       ],
       "name": "safeTransferFrom",
@@ -1887,6 +1985,62 @@
         }
       ],
       "name": "getPriceETH",
+      "outputs": [
+        {
+          "name": "",
+          "type": "uint256"
+        }
+      ],
+      "payable": false,
+      "stateMutability": "view",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_basePricePerCarat",
+          "type": "uint256"
+        }
+      ],
+      "name": "setBasePricePerCarat",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": true,
+      "inputs": [],
+      "name": "getBasePricePerCarat",
+      "outputs": [
+        {
+          "name": "",
+          "type": "uint256"
+        }
+      ],
+      "payable": false,
+      "stateMutability": "view",
+      "type": "function"
+    },
+    {
+      "constant": false,
+      "inputs": [
+        {
+          "name": "_pricePowerx100",
+          "type": "uint256"
+        }
+      ],
+      "name": "setPricePowerx100",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "constant": true,
+      "inputs": [],
+      "name": "getPricePowerx100",
       "outputs": [
         {
           "name": "",
